[fix] #60 use appropriate method to return empty List